--- a/becpg-project/becpg-project-share/src/main/assembly/web/components/project/project-list.css
+++ b/becpg-project/becpg-project-share/src/main/assembly/web/components/project/project-list.css
@@ -425,3 +425,14 @@
 .sticky-footer, .sticky-push {
 	display:none;
 }
+
+ .datagrid.project-list div.grid  {
+	height: calc(100vh - 230px);
+}
+
+.full-screen  .datagrid.project-list div.grid {
+	height: calc(100vh - 100px);
+}
+
+
+
