--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-rm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-rm-form-config.xml
@@ -971,6 +971,12 @@
           <show force="true" id="bcpg:mblValue"/>
           <show force="true" id="bcpg:advRespectedProductSpecs"/>
           <show force="true" id="bcpg:advNotRespectedProductSpecs"/>
+          <show force="true" id="bcpg:advLca"/>
+          <show force="true" id="bcpg:lcaListValue"/>
+          <show force="true" id="bcpg:advSvhcAnd"/>
+          <show force="true" id="bcpg:advSvhcNot"/>
+          <show force="true" id="pjt:slCriterion"/>
+          <show force="true" id="pjt:slScore"/>
         </field-visibility>
         <appearance>
           <set appearance="bordered-panel" id="product-criteria" label-id="becpg.forms.set.product-criteria.label"/>
@@ -1080,6 +1086,12 @@
           <field id="cm:creator" mandatory="false" read-only="false" set="2-col-product-criteria">
             <control>
               <control-param name="forceEditable">true</control-param>
+            </control>
+          </field>
+          <field id="bcpg:advAlVolNot" mandatory="false" read-only="false" set="allergens-claims">
+            <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+              <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
             </control>
           </field>
           <set appearance="bordered-panel" id="allergens-claims" label-id="becpg.forms.set.allergens-claims.label" template="/org/alfresco/components/form/2-column-set.ftl"/>
@@ -1249,6 +1261,50 @@
               <control-param name="isSearch">true</control-param>
             </control>
           </field>
+          <set appearance="bordered-panel" id="lca" label-id="becpg.forms.set.lca-criteria.label" template="/org/alfresco/components/form/2-column-set.ftl"/>
+          <field id="bcpg:advLca" mandatory="false" read-only="false" set="lca">
+            <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+              <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+            </control>
+          </field>
+          <field id="bcpg:lcaListValue" mandatory="false" read-only="false" set="lca">
+            <control template="/org/alfresco/components/form/controls/numberrange.ftl">
+              <control-param name="forceEditable">true</control-param>
+            </control>
+          </field>
+          <set appearance="bordered-panel" id="svhc" label-id="becpg.forms.set.svhc-criteria.label" template="/org/alfresco/components/form/2-column-set.ftl"/>
+          <field id="bcpg:advSvhcAnd" mandatory="false" read-only="false" set="svhc">
+            <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+              <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+            </control>
+          </field>
+          <field id="bcpg:advSvhcNot" mandatory="false" read-only="false" set="svhc">
+            <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+              <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+            </control>
+          </field>
+          <set appearance="bordered-panel" id="survey" label-id="becpg.forms.set.survey-criteria.label" template="/org/alfresco/components/form/2-column-set.ftl"/>
+          <!--<field id="bcpg:advSurvey" mandatory="false" read-only="false" set="survey">
+            <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+              <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+            </control>
+          </field>-->
+          <!--<set appearance="bordered-panel" id="score" label-id="becpg.forms.set.score-criteria.label" template="/org/alfresco/components/form/2-column-set.ftl"/>
+          <field id="pjt:slCriterion" mandatory="false" read-only="false" set="score">
+            <control template="/org/alfresco/components/form/controls/autocomplete.ftl">
+              <control-param name="forceEditable">true</control-param>
+              <control-param name="isSearch">true</control-param>
+            </control>
+          </field>
+          <field id="pjt:slScore" mandatory="false" read-only="false" set="score">
+            <control template="/org/alfresco/components/form/controls/numberrange.ftl">
+              <control-param name="forceEditable">true</control-param>
+            </control>
+          </field>-->
         </appearance>
       </form>
       <form id="bulk-edit">
