--- a/becpg-share/src/main/assembly/web/components/wizard/wizard-mgr.css
+++ b/becpg-share/src/main/assembly/web/components/wizard/wizard-mgr.css
@@ -15,7 +15,7 @@
     float: none;
 }
 
-div.wizard-comments {
+/* div.wizard-comments {
 	  margin-top: 20px;
 	  width: 21%;
 	  overflow: hidden;
@@ -26,16 +26,15 @@ div.wizard-catalog {
 	  width: 21%;
 	  overflow: hidden;
 }
-
+ */
 div.wizard-container{
-	float: left; 
 	clear: none;
 	width: 100%;
 }
 
 div.wizard-content {
-	  float: left;
-	  width: 78%;
+	  width: 100%;
+	  min-height:100%;
 	  overflow: hidden;
 }
 
@@ -322,7 +321,7 @@ div.wizard-content {
 
 * .wizard  .datagrid .scrollableList {
 	padding: 0;
-	height: 450px;
+	height: calc(100vh - 350px);
 }
 
 
@@ -348,7 +347,6 @@ div.wizard-content {
 .wizard .datagrid .yui-dt-col-actions {
 	border-right: none;
 }
-
 
 /**
  Bar
